Fix LionTest to use List.of with correct food data